[package]
name = "conf_v8"
version = "0.1.0"
authors = ["Jack <khevse@gmail.com>"]

[dependencies]
log = "0.3"
time = "0.1"
regex = "0.1"
lazy_static = "0.1"
aho-corasick = "0.5"
conv = { path = "../conv" }
logger = { path = "../logger" }
settings = { path = "../settings" }
file_system = { path = "../file_system" }
zlib_wrapper = { path = "../zlib_wrapper" }